--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,10 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="AfriVault - Secure Digital E-Wallet for Africa"
-    />
+      content="E-Wallet - Secure Digital E-Wallet for Rwanda"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
     <title>E-Wallet</title>
   </head>
   <body>
